TEST/templates/database.yaml

# db-service
apiVersion: v1
kind: Service
metadata:
  name: mysql-user-service
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    db: mysql-user
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-product-service
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    db: mysql-product
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-order-service
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    db: mysql-order
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-cart-service
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    db: mongo-cart
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-rating-service
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    db: mongo-rating

---

# database deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-user
spec:
  replicas: {{ .Values.database.user.replicaCount }}
  selector:
    matchLabels:
      db: mysql-user
  template:
    metadata:
      labels:
        db: mysql-user
    spec:
      containers:
      - image: maintndjs/mysql:test
        name: mysql
        envFrom: 
        - configMapRef:
            name: database
        ports:
        - containerPort: 3306
          name: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-product
spec:
  replicas: {{ .Values.database.product.replicaCount }}
  selector:
    matchLabels:
      db: mysql-product
  template:
    metadata:
      labels:
        db: mysql-product
    spec:
      containers:
      - image: maintndjs/mysql:test
        name: mysql
        envFrom: 
        - configMapRef:
            name: database
        ports:
        - containerPort: 3306
          name: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-order
spec:
  replicas: {{ .Values.database.order.replicaCount }}
  selector:
    matchLabels:
      db: mysql-order
  template:
    metadata:
      labels:
        db: mysql-order
    spec:
      containers:
      - image: maintndjs/mysql:test
        name: mysql
        envFrom: 
        - configMapRef:
            name: database
        ports:
        - containerPort: 3306
          name: mysql


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-cart
spec:
  replicas: {{ .Values.database.cart.replicaCount }}
  selector:
    matchLabels:
      db: mongo-cart
  template:
    metadata:
      labels:
        db: mongo-cart
    spec:
      containers:
      - image: mongo:3.6.20
        name: mongo
        envFrom: 
        - configMapRef:
            name: database
        ports:
        - containerPort: 27017
          name: mongodb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-rating
spec:
  replicas: {{ .Values.database.rating.replicaCount }}
  selector:
    matchLabels:
      db: mongo-rating
  template:
    metadata:
      labels:
        db: mongo-rating
    spec:
      containers:
      - image: mongo:3.6.20
        name: mongo
        envFrom: 
        - configMapRef:
            name: database
        ports:
        - containerPort: 27017
          name: mongodb
