TEST/templates/frontend.yaml
# frontend 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: {{ .Values.app.frontend.replicaCount }}
  template: 
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: frontend
    spec:
      containers:
      #test93fixed {{ .Values.image.repository }}
      - name: frontend
        image: {{ .Values.image.repository}}/frontend:v2 #{{ .Values.image.tag }}
        imagePullPolicy: {{ .Values.image.pullPolicy }}
        ports:
        - containerPort: 3000

        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 80
          periodSeconds: 10
          
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 80
          periodSeconds: 10
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
  externalTrafficPolicy: Local
  type: LoadBalancer

---

apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: frontend
  namespace: default
spec:
  maxReplicas: {{ .Values.hpa.frontend.maxReplicas }}
  minReplicas: {{ .Values.hpa.frontend.minReplicas }}
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: frontend
  behavior:
    scaleDown:
      stabilizationWindowSeconds: 60 # intentionally using a small value. default: 300
  metrics:
    - type: Object
      object:
        metric:
          name: request_duration_seconds_90ile
        describedObject:
          apiVersion: apps/v1
          kind: Deployment
          name: frontend
        target:
          type: Value
          value: {{ .Values.hpa.frontend.targetValue }}
