TEST/templates/product.yaml
# product
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  selector:
    matchLabels:
      app: product
  replicas: {{ .Values.app.product.replicaCount }}
  template: 
    metadata:
      labels:
        app: product
    spec:
      containers:
      #
      - name: product-api-container
        image: {{ .Values.image.repository }}/product-service:{{ .Values.image.tag }}
        imagePullPolicy: {{ .Values.image.pullPolicy }}
        ports:
        - containerPort: 8000
        envFrom: 
        - configMapRef:
            name: service-url
        - configMapRef:
            name: app-db-setting

        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 80
          periodSeconds: 10
          
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 80
          periodSeconds: 10
      
---
apiVersion: v1
kind: Service
metadata:
  name:  product-service
spec:
  selector:
    app: product
  ports:
    - name: http
      port: 8080
      targetPort: 8000
  type: ClusterIP


---

apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: product
  namespace: default
spec:
  maxReplicas: {{ .Values.hpa.product.maxReplicas }}
  minReplicas: {{ .Values.hpa.product.minReplicas }}
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: product
  behavior:
    scaleDown:
      stabilizationWindowSeconds: 60 # intentionally using a small value. default: 300
  metrics:
  - type: Object
    object:
      describedObject:
        apiVersion: apps/v1
        kind: Deployment
        name: product
      metric:
        name: request_duration_seconds_90ile
      target:
        type: Value
        value: {{ .Values.hpa.product.targetValue }}
